# ToyEngine

./: .gitignore  CMakeLists.txt  README.md
include/Framework/Common/: BaseApplication.h  GraphicsManager.h
include/Framework/Interface/: IApplication.h  IRuntimeModule.h  Interface.h
src/Empty/: EmptyApplication.cpp
src/Framework/Common/: BaseApplication.cpp  CMakeLists.txt  GraphicsManager.cpp  main.cpp
